--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,8 @@
 {
   "require": {
     "php": "^7.2",
-    "skiphog/http": "^1.0",
-    "skiphog/view": "^1.0",
-    "skiphog/cache": "^1.0",
-    "skiphog/router": "^1.0",
-    "skiphog/container": "^1.0"
+    "skiphog/container": "^1.0",
+    "skiphog/wardex": "^1.0"
   },
   "autoload": {
     "psr-4": {
@@ -18,23 +15,11 @@
   "repositories": [
     {
       "type": "git",
-      "url": "https://github.com/skiphog/http"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/skiphog/view"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/skiphog/cache"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/skiphog/router"
-    },
-    {
-      "type": "git",
       "url": "https://github.com/skiphog/container"
+    },
+    {
+      "type": "git",
+      "url": "https://github.com/skiphog/wardex"
     }
   ],
   "config": {
