--- a/Nginx-1.12_vhost.conf
+++ b/Nginx-1.12_vhost.conf
@@ -11,7 +11,7 @@ server {
     
     ssl_certificate               "%sprogdir%/userdata/config/cert_files/server.crt";
     ssl_certificate_key           "%sprogdir%/userdata/config/cert_files/server.key";
-    
+
     #add_header Strict-Transport-Security "max-age=94608000";
     #Убрать / на конце страницы
     location ~ .+/$ {
@@ -29,10 +29,17 @@ server {
 		deny all; 
 	}
 
-	#location ~* ^.+\.(css|htc|js|bmp|gif|jpe?g|tiff?|png|cur|ico|woff2?|eot|ttc|ttf|otf|svg|swf)$ {
+	location ~* ^.+\.(css|htc|js|bmp|gif|jpe?g|tiff?|png|cur|ico|woff2?|eot|ttc|ttf|otf|svg|swf)$ {
         #try_files $uri /img/heart-stop.jpg;
         #expires 1d;
-    #}
+
+         # kill cache
+        #add_header Last-Modified $date_gmt;
+        #add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+        #if_modified_since off;
+        #expires -1;
+        #etag off;
+    }
 
     location ~ \.php$ {
         #root                               "%hostdir%";
