--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,8 @@
     "optimize-autoloader": true
   },
   "minimum-stability": "dev",
-  "prefer-stable": true
+  "prefer-stable": true,
+  "name": "skipgog/wardex",
+  "license": "MIT",
+  "description": "Test application"
 }
