--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
   "require": {
     "php": "^7.2"
   },
+  "require-dev": {
+    "filp/whoops": "^2.2"
+  },
   "autoload": {
     "psr-4": {
       "App\\": "app/",
