--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,7 @@
   "require": {
     "php": "^7.2"
   },
-  "require-dev": {
-    "filp/whoops": "^2.2"
-  },
+  "require-dev": {},
   "autoload": {
     "psr-4": {
       "App\\": "app/",
