--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "license": "MIT",
   "description": "Application skills-swap",
   "require": {
-    "php": "^7.2"
+    "php": "^7.2",
+    "ext-pdo": "*",
+    "ext-mbstring": "*"
   },
   "require-dev": {},
   "autoload": {
